tests/baselines/reference/classExtendsClauseClassMergedWithModuleNotReferingConstructor.errors.txt
classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts(10,21): error TS2507: Type 'number' is not a constructor function type.


==== classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts (1 errors) ====
    class A {
        a: number;
    }
    namespace A {
        export var v: string;
    }
    
    namespace Foo {
        var A = 1;
        class B extends A {
                        ~
!!! error TS2507: Type 'number' is not a constructor function type.
            b: string;
        }
    }